# classroom

./: README  ejemplo1.2.c  ejemplo1.2.txt
buffer_overflow/: README.md  heapexample  heapexample.c  pp4  script  vuln  vuln.c
common_c_memory_management_errors/: cmme1  cmme2.c  cmme3
ejercicio_evaluacion_c/: README.md  ejemplo1  ejemplo1.c  ejemplo2.c  ejemplo3.c
ejercicio_evaluacion_c/bloque1/: ejemplo1.c  ejemplo2.c  ejemplo3  ejemplo3.c  ejemplo3erroneo.c  ejemplo3erroneo.rpt
ejercicio_evaluacion_c/bloque2/: ejercicio1  ejercicio1.c  ejercicio2  ejercicio2.c  ejercicio3  ejercicio3.c  perf.data  perf.data.old
exp_uso_traza_codigo/: README.md  cmme1.c  cmme2  cmme3.c  con31  con31.c  con31_compliant.c
saq/: README.md  answers_webapp
tests_gtest/: CMakeLists.txt  exampleFunction.cpp
